Agrego un archivo de configuración al que, por ahora, solo uso para conmfigurar si va a buscar o no datos a las bases.
Agrego tres indicadores gráficos. Sólo me interesan 2 pero dejo los tres porque me
costó bastante hacerlos andar.

EL TRUCO RESULTÓ SER CONFIGURAR PARA QUE ESPERE QUE TERMINE LA ACTIVIDAD DE RED

--- a/primero-template/config.json
+++ b/primero-template/config.json
@@ -7,13 +7,16 @@
         "printBackground": true,
         "format": "A4",
         "mediaType": "screen",
-        "displayHeaderFooter": true
+        "displayHeaderFooter": true,
+        "landscape": false,
+        "waitForJS": false,
+        "waitForNetworkIddle": true
     },
     "creationDate": {
         "$$date": 1584924012440
     },
     "modificationDate": {
-        "$$date": 1585953108357
+        "$$date": 1586114730616
     },
     "_id": "sQs81e0WKW9LekFs",
     "$entitySet": "templates",
@@ -21,5 +24,12 @@
         {
             "shortid": "HJx2MVtS8L"
         }
-    ]
+    ],
+    "htmlToXlsx": {
+        "htmlEngine": "chrome"
+    },
+    "pdfOperations": [],
+    "electron": {
+        "blockJavaScript": true
+    }
 }
